tests/success/test_funciones.tds
/*
Este test es correcto
*/
integer variable;
integer a;

//definicion funcion
integer inc(integer x){
    return x + 1;
}

// definicion procedimiento
void inc_Void(integer x){
    x = x + 1;
    return;
}

// definicion de funcion externa
extern integer getInt();

integer main(){
    integer x;
    integer y;
    bool a;
    bool b;
    bool c;
    a = true;
    b = false;
    c = a && b;
    c = a == !b;
    y = 1;
    {
        integer x;
        x = 2;
        y = x + 1;
    }
    return x;
}
